# failsafe

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md
.github/workflows/: ci.yml
cmake/: failsafeConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp  custom_backend.cpp  error_handling.cpp  exception_trap_demo.cc  string_formatting.cpp
ext/: CMakeLists.txt
ext/doctest/: CMakeLists.txt  patch_doctest.cmake
ext/termcolor/: CMakeLists.txt  termcolor-no-install.cmake
ext/utfcpp/: CMakeLists.txt  utfcpp-no-install.cmake
include/failsafe/: enforce.hh  exception.hh  failsafe.hh  logger.hh  mainpage.dox
include/failsafe/detail/: location_format.hh  string_utils.hh
include/failsafe/logger/backend/: cerr_backend.hh  grpc_logger.hh  poco_backend.hh  sdl_backend.hh
test/: CMakeLists.txt  main.cc  strings_helper.hh  test_compile_time_filtering.cc  test_container_edge_cases.cc  test_enforce.cc  test_enforce_chaining.cc  test_exception.cc  test_exception_chaining.cc  test_exception_trap.cc  test_lazy_logging.cc  test_location_format.cc  test_logger.cc  test_msvc_compat.cc  test_portability.cc  test_string_formatters.cc  test_string_utils.cc
